Delete network igms when deleting process config (#38)
Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>